# Iris

./: Cargo.toml  FEAT.md  README.md  package.json  pyproject.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
RFC/: 0002.md
docs/: architecture.md  distributed.md  jit.md  usage.md  vortex.md
docs/RFC/: 0003.md
docs/plans/: 0002_JIT.md  FEAT.md
iris/: __init__.py  jit.py
src/: lib.rs  logging.rs  mailbox.rs  network.rs  node.rs  registry.rs  supervisor.rs
src/py/: jit_stub.rs  mailbox.rs  mod.rs  pool.rs  runtime.rs  utils.rs  vortex.rs  vortex_bytecode.rs  wrappers.rs
src/py/jit/: codegen.rs  config.rs  heuristics.rs  mod.rs  parser.rs  quantum.rs  simd.rs  tests.rs
src/py/jit/codegen/: buffer.rs  compiler.rs  eval.rs  exec.rs  gen_expr.rs  jit_module.rs  jit_types.rs  lowering.rs  math.rs  mod.rs  quantum.rs  registry.rs
src/vortex/: engine.rs  mod.rs  rescue_pool.rs  scheduler.rs  transaction.rs  transmuter.rs  vortex_bytecode.rs  watcher.rs
src/vortex/ocular/: callbacks.rs  mod.rs  model.rs  state.rs  telemetry.rs
tests/: integration_test.rs  mailbox_core.rs  overflow_policies.rs  pyo3_exit_reasons.rs  pyo3_hot_swap.rs  pyo3_jit.rs  pyo3_mailbox.rs  pyo3_net_monitor.rs  pyo3_network.rs  pyo3_path_supervisors.rs  pyo3_phase7.rs  pyo3_registry.rs  pyo3_restart_all_path_supervisors.rs  pyo3_restart_path_supervisors.rs  pyo3_runtime.rs  pyo3_send_many_bench.rs  pyo3_timers.rs  pyo3_vortex.rs  runtime_actor_core.rs  supervision_paths.rs  supervisor_core.rs  test_jit_fallback_unittest.py  test_quantum_heavy_math.py  vortex_bytecode.rs  vortex_engine.rs  vortex_integration_test.rs  vortex_rescue_pool.rs  vortex_scheduler.rs  vortex_suite.rs  vortex_transaction.rs  vortex_transmuter.rs  vortex_watcher.rs
tests/benchmarks/: benchmark_push_regression.py  benchmark_send_many.py
