[package]
name = "iris"
version = "0.5.0"
edition = "2021"
description = "Iris — A hybrid distributed runtime fabric for actors, native compute offload, and cross-language services."
license = "AGPL-3.0"
repository = "https://github.com/SSL-ACTX/iris"

[lib]
name = "iris"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
num_cpus = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
dashmap = "5"
parking_lot = "0.12"
bytes = "1.11.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
once_cell = "1"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3.11"

# Python (Default)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true}
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# JIT (Optional and experimental)
cranelift = { version = "0.87", optional = true }
cranelift-module = { version = "0.87", optional = true }
cranelift-jit = { version = "0.87", optional = true }
cranelift-native = { version = "0.87", optional = true }
wide = { version = "1.2", optional = true }

# Node.js (Optional and currently broken)
napi = { version = "2.14", default-features = false, features = ["napi4", "tokio_rt", "async"] , optional = true }
napi-derive = { version = "2.14", optional = true }

[build-dependencies]
napi-build = { version = "2.0", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "dep:pyo3-asyncio"]
jit = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-native", "dep:wide"]
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
vortex = ["pyo3"]

[dev-dependencies]
futures = "0.3"
tracing-subscriber = "0.3"
pyo3 = { version = "0.20", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = 0
strip = true
panic = "abort"
incremental = true
lto = false
codegen-units = 256

[profile.test]
panic = "unwind"